--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -13,14 +13,14 @@ body {
 }
 :root {
   --color-bg1: #131313; /* Очень тёмный оттенок для фона */
-  --color-bg2: #2d4cff; /* Тёмно-синий */
+  --color-bg2: #131313; /* Тёмно-синий */
   --color1: 52, 117, 237; /* Голубой #3475ED */
   --color2: 45, 76, 255; /* Синий #2d4cff */
-  --color3: 100, 150, 255; /* Светло-синий */
+  --color3: 45, 76, 255; /* Светло-синий */
   --color4: 80, 100, 255; /* Средний синий */
   --color5: 40, 50, 200; /* Тёмно-синий */
   --color-interactive: 255, 255, 255; /* Новый цвет для интерактивных элементов */
-  --circle-size: 80%;
+  --circle-size: 90%;
   --blending: hard-light;
 }
 
