--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -1,4 +1,4 @@
-<header class="section header">
+<header class="header">
   <div class="gradient-bg">
     <svg xmlns="http://www.w3.org/2000/svg">
       <defs>
