--- a/src/scss/components/about.scss
+++ b/src/scss/components/about.scss
@@ -1,10 +1,13 @@
 .about {
-  height: 100vh;
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
   background-color: #131313;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
+
   z-index: 2;
 
   &__container {
@@ -30,9 +33,9 @@
     width: 100%;
     opacity: 0;
     margin-right: -170px;
+    position: relative;
   }
-  .circle-wrapper {
-  }
+ 
   &__circle {
     width: 500px;
     height: 500px;
@@ -47,31 +50,30 @@
     font-weight: 700;
     font-size: 50px;
     color: var(--white-color-10);
-   
+
     img {
       transform: scale(1.05);
     }
- 
   }
   .about-circle-wrapper {
     border-radius: 50%;
     border: 20px solid var(--black-color-10);
+
   }
   &__us {
     background-color: var(--blue-color-10);
     z-index: 2;
+    
   }
   &__web {
-    margin-left: -540px;
+   position: absolute;
     z-index: 1;
- 
   }
   &__des {
-    margin-left: -540px;
+    position: absolute;
     z-index: 0;
-   
   }
-  &__us-text-wrapper{
+  &__us-text-wrapper {
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -80,7 +82,7 @@
     position: absolute;
     left: 37vw;
     top: 30vh;
-    
+
     // opacity: 0;
   }
   &__us-text {
@@ -88,18 +90,16 @@
     font-weight: 300;
     font-size: 20px;
     color: var(--white-color-10);
- 
   }
 
   .text-web,
-  .text-des{
+  .text-des {
     opacity: 0;
     visibility: hidden;
     top: 35vh;
   }
 
-
-  &__sidebar{
+  &__sidebar {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -114,7 +114,7 @@
     padding-left: 50px;
   }
 
-  &__content-btn{
+  &__content-btn {
     width: 150px;
     height: 150px;
     border-radius: 50%;
@@ -122,16 +122,16 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    img{
-        transform: scale(1.08);
+    img {
+      transform: scale(1.08);
     }
-    transition: box-shadow .3s ease-in-out;
-    &:hover{
-        box-shadow: 0 0 50px 0 #2d4cff;
+    transition: box-shadow 0.3s ease-in-out;
+    &:hover {
+      box-shadow: 0 0 50px 0 #2d4cff;
     }
   }
 
-  .sidebar-us{
+  .sidebar-us {
     background-color: var(--blue-color-10);
     display: none;
   }
