--- a/src/scss/components/adv.scss
+++ b/src/scss/components/adv.scss
@@ -1,9 +1,13 @@
 .adv {
-  position: relative;
-  z-index: 4;
-  height: 100vh;
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #131313;
+  
+  z-index: 2;
  background-color: var(--black-color-10);
-  transform: translateY(-100%);
+  
   &__container {
     display: flex;
     flex-direction: column;
