--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,4 +6,4 @@
 @import 'components/menu';
 @import 'components/about';
 @import 'components/adv';
-@import 'components/steps';
+@import 'components/live';
