--- a/src/html/components/live.html
+++ b/src/html/components/live.html
@@ -1,4 +1,4 @@
-<section class="live main__live">
+<section id="live" class="live main__live">
   <div class="container live__container">
     <h2 class="live__title">ЖИЗНЕННЫЙ ЦИКЛ ПРОЕКТА</h2>
     <p class="live__subtitle">
