--- a/src/html/components/menu.html
+++ b/src/html/components/menu.html
@@ -97,7 +97,7 @@
                 <a href="#" class="menu__right-list-link">УСЛУГИ</a>
               </div>
               <div class="swiper-slide">
-                <a href="#" class="menu__right-list-link">ЭТАПЫ</a>
+                <a href="#live" class="menu__right-list-link">ЭТАПЫ</a>
               </div>
               <div class="swiper-slide">
                 <a href="#" class="menu__right-list-link">РАСЧЕТ</a>
