--- a/src/scss/components/adv.scss
+++ b/src/scss/components/adv.scss
@@ -82,14 +82,14 @@
     font-family: var(--font-family);
     font-weight: 300;
     font-size: 30px;
-    color: var(--white-color-10);
+    color: #fff;
   }
 
   &__card-title {
     font-family: var(--font-family);
     font-weight: 700;
     font-size: 50px;
-    color: var(--white-color-10);
+    color: #fff;
     max-width: 251px;
   }
 }
