--- a/src/scss/base/main.scss
+++ b/src/scss/base/main.scss
@@ -136,16 +136,18 @@ label {
 }
 .burger-menu {
   width: 60px;
+ 
   display: flex;
   flex-direction: column;
   gap: 10px;
   position: fixed;
-  top: 40px;
+  top: 10px;
   right: 50px;
+ padding: 30px 0;
   transition: gap 0.3s ease-in-out;
   z-index: 5000;
   span {
-    border: 1px solid #fff;
+    border: 1px solid var(--white-color-10);
     height: 0px;
     width: 100%;
     transition: transform 0.3s ease-in-out;
@@ -160,5 +162,32 @@ label {
   }
   span:last-child {
     transform: rotate(-45deg) translate(0, 0);
+  }
+}
+
+
+.btn--hover{
+  position: relative;
+  overflow: hidden;
+  transition: border .5s ease-in-out;
+  span {
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 0;
+    border-radius: 50%;
+    background-color: var(--blue-color-10);
+    transition: width 0.5s ease-in-out, height 0.5s ease-in-out;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+  }
+
+  &:hover {
+   border:1px solid var(--black-color-10);
+
+    span {
+      width: 225%;
+      height: 600px;
+    }
   }
 }
