--- a/src/scss/components/about.scss
+++ b/src/scss/components/about.scss
@@ -3,7 +3,7 @@
   inset: 0;
   width: 100%;
   height: 100%;
-  background-color: #131313;
+  background-color: var(--black-color-10);
   display: flex;
   justify-content: center;
   align-items: center;
