--- a/src/scss/components/calc.scss
+++ b/src/scss/components/calc.scss
@@ -91,6 +91,8 @@
     width: 100%;
     height: 100%;
     position: relative;
+    margin-top: 60px;
+    overflow: hidden;
   }
   &__quiz-inner {
     display: flex;
@@ -105,14 +107,27 @@
     gap: 10px;
     margin-bottom: 30px;
   }
-
+.quiz-question__upper-row{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
   .quiz-question__number {
     font-family: var(--font-family);
     font-weight: 300;
     font-size: 30px;
     color: var(--blue-color-10);
   }
-
+  .quiz-question__back-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 20px;
+    color: var(--blue-color-10);
+  }
   .quiz-question__text {
     font-family: var(--font-family);
     font-weight: 700;
@@ -149,6 +164,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: auto;
+    align-items: end;
   }
 
   .quiz-bottom__progress {
@@ -157,6 +173,7 @@
     max-width: 300px;
     gap: 10px;
     width: 100%;
+    transform: translateY(9px);
   }
 
   .quiz-bottom__progress-number {
@@ -243,12 +260,16 @@
     visibility: hidden;
   }
 
-  .quiz-result__subtitle {
-    font-family: var(--font-family);
-    font-weight: 300;
-    font-size: 20px;
-    color: var(--blue-color-10);
-    margin-bottom: 20px;
+  &__quiz-result-reset {
+    align-self: end;
+    svg {
+      transition: all 0.6s ease-in-out;
+    }
+    &:hover {
+      svg {
+        transform: rotate(360deg);
+      }
+    }
   }
 
   .quiz-result__text {
@@ -303,13 +324,12 @@
     max-width: 300px;
     width: 100%;
   }
-.quiz-result__input-connect{
-  max-width: 300px;
+  .quiz-result__input-connect {
+    max-width: 300px;
     width: 100%;
-}
+  }
   .quiz-result__input-name,
   .quiz-result__input-type {
-   
     width: 100%;
     border-bottom: 1px solid var(--black-color-10);
     padding: 5px 10px;
@@ -336,12 +356,12 @@
   }
 
   .quiz-result__input-name:focus ~ .quiz-result__label-name,
-   .quiz-result__input-type:focus ~ .quiz-result__placeholder-connect{
+  .quiz-result__input-type:focus ~ .quiz-result__placeholder-connect {
     bottom: 30px;
     font-size: 15px;
   }
-  .quiz-result__input-name.not-empty  ~ .quiz-result__label-name,
-   .quiz-result__input-type.not-empty  ~ .quiz-result__placeholder-connect{
+  .quiz-result__input-name.not-empty ~ .quiz-result__label-name,
+  .quiz-result__input-type.not-empty ~ .quiz-result__placeholder-connect {
     bottom: 30px;
     font-size: 15px;
   }
@@ -349,14 +369,13 @@
     display: flex;
     gap: 10px;
     margin-top: 10px;
-   
   }
 
-  input[type='radio']:checked + .quiz-result__method{
+  input[type='radio']:checked + .quiz-result__method {
     background-color: var(--blue-color-10);
     border: 1px solid var(--blue-color-10);
     color: var(--white-color-10);
-    svg path{
+    svg path {
       fill: var(--white-color-10);
     }
   }
@@ -370,16 +389,14 @@
     font-weight: 400;
     font-size: 15px;
     color: var(--black-color-10);
-    transition: all .3s ease-in-out;
+    transition: all 0.3s ease-in-out;
     svg path {
       fill: var(--blue-color-10);
-      transition: fill .3s ease-in-out;
+      transition: fill 0.3s ease-in-out;
     }
 
     border: 1px solid var(--black-color-10);
     border-radius: 50px;
-
-   
   }
 
   .quiz-result__send {
