--- a/src/scss/base/main.scss
+++ b/src/scss/base/main.scss
@@ -77,7 +77,7 @@ label {
   display: -ms-flexbox;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 }
 
