--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,4 +7,6 @@
 @import 'components/about';
 @import 'components/adv';
 @import 'components/live';
+@import 'components/services';
 @import 'components/calc';
+@import 'components/footer';
