--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -26,7 +26,7 @@
   <div class="container header__container">
     <div class="header__upper" >
       <a href="/" class="header__logo" style="cursor: pointer;">equinox</a>
-      <button class="header__swither">
+      <button class="header__swither dark-active" date-theme-switcher>
         <svg
           class="black-circle"
           width="50"
