--- a/src/html/components/menu.html
+++ b/src/html/components/menu.html
@@ -10,13 +10,88 @@
           </h4>
           <div class="form__inputs-wrapper">
             <fieldset class="form__inputs">
-              <input type="text" class="menu__input-name" placeholder="Имя" />
-              <input
+              <div class="footer__input-wrapper">
+                <input
                 type="text"
-                class="menu__input-connect"
-                placeholder="Выбери способ связи"
-                id="contactMethod"
+                class="footer__input-name input-name"
+                id="footer-name"
+                placeholder=" "
               />
+              <label class="footer__label-name" for="name">Имя</label>
+            </div>
+              <div class="menu__input-connect">
+                <div class="menu__input-wrapper">
+                  <input type="text" disabled class="menu__input-type input-connect" id="connect" placeholder=" " />
+                  <label class="menu__placeholder-connect placeholder-connect" for="connect"
+                    >Выберите способ связи</label
+                  >
+                </div>
+                <div class="menu__contact-method-radio">
+                  <input
+                    type="radio"
+                    id="telegram-radio-menu"
+                    name="connectMethod"
+                    value="telegram"
+                    hidden
+                  />
+                  <label for="telegram-radio-menu" class="menu__method">
+                  
+                    <svg
+                      width="20"
+                      height="20"
+                      viewBox="0 0 20 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <g clip-path="url(#clip0_719_334)">
+                        <path
+                          d="M18.3764 1.77433L0.657317 8.64256C-0.0557229 8.96238 -0.296898 9.60293 0.484944 9.95053L5.03069 11.4026L16.0216 4.57487C16.6217 4.14622 17.2361 4.26053 16.7074 4.73204L7.2677 13.3232L6.97117 16.959C7.24583 17.5204 7.74873 17.523 8.0695 17.244L10.6811 14.7601L15.154 18.1267C16.1928 18.7449 16.7581 18.346 16.9816 17.2129L19.9154 3.24925C20.22 1.85449 19.7006 1.23996 18.3764 1.77433Z"
+                          fill="white"
+                        />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_719_334">
+                          <rect width="20" height="20" fill="white" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </label>
+  
+                  <input
+                    type="radio"
+                    id="email-radio-menu"
+                    name="connectMethod"
+                    value="email"
+                    hidden
+                  />
+                  <label for="email-radio-menu" class="menu__method">
+                    <svg
+                      width="20"
+                      height="16"
+                      viewBox="0 0 20 16"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M13.3892 8.33343L19.7933 13.8226C19.9296 13.5106 19.9999 13.1739 20 12.8334V4.12427L13.3892 8.33343Z"
+                        fill="white"
+                      />
+                      <path
+                        d="M10.4483 8.22754L19.91 2.20587C19.7714 1.67145 19.4598 1.19793 19.0239 0.859202C18.5879 0.520469 18.0521 0.335576 17.5 0.333374H2.49997C1.94788 0.335576 1.41205 0.520469 0.97608 0.859202C0.540114 1.19793 0.228537 1.67145 0.0899658 2.20587L9.55247 8.22754C9.6865 8.31226 9.84182 8.35723 10.0004 8.35723C10.1589 8.35723 10.3143 8.31226 10.4483 8.22754Z"
+                        fill="white"
+                      />
+                      <path
+                        d="M0 4.12427V12.8334C0.000309152 13.1733 0.0706614 13.5095 0.206667 13.8209L6.61083 8.33344L0 4.12427Z"
+                        fill="white"
+                      />
+                      <path
+                        d="M11.9284 9.2617L11.3451 9.6342C10.9434 9.88788 10.478 10.0225 10.003 10.0225C9.5279 10.0225 9.06256 9.88788 8.66089 9.6342L8.07756 9.26086C8.06506 9.27253 8.06006 9.28836 8.04756 9.2992L1.34839 15.0375C1.70232 15.2288 2.09776 15.3304 2.50006 15.3334H17.5001C17.9026 15.3304 18.2983 15.2288 18.6526 15.0375L11.9584 9.2992C11.9451 9.28836 11.9401 9.27253 11.9284 9.2617Z"
+                        fill="white"
+                      />
+                    </svg>
+                  </label>
+                </div>
+            </div>
             </fieldset>
             <button class="form__send-btn">
                 <span class="send-text" style="opacity: 0;">Отправить</span>
@@ -47,7 +122,7 @@
             </button>
           </div>
           <div class="contact-method-radio">
-            <input type="radio" id="telegram" name="contactMethod" value="telegram" hidden>
+            <input type="radio" id="telegram-radio" name="contactMethod" value="telegram" hidden>
             <label for="telegram" class="contact-method-label">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_719_334)">
@@ -62,7 +137,7 @@
                     
             </label>
       
-            <input type="radio" id="email" name="contactMethod" value="email" hidden>
+            <input type="radio" id="email-radio" name="contactMethod" value="email" hidden>
             <label for="email" class="contact-method-label">
                 <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13.3892 8.33343L19.7933 13.8226C19.9296 13.5106 19.9999 13.1739 20 12.8334V4.12427L13.3892 8.33343Z" fill="white"/>
