fix bugs and add adaptive header

--- a/src/html/components/calc.html
+++ b/src/html/components/calc.html
@@ -89,7 +89,7 @@
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
           >
-            <circle cx="25" cy="25" r="25" fill="#131313" />
+            <circle cx="25" cy="25" r="25" fill="var(--black-color-10)" />
           </svg>
           <svg
             class="loading-circle-blue"
@@ -106,12 +106,11 @@
       <div class="calc__quiz-result">
         <button class="calc__quiz-result-reset">
           <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M37 25.5C37 28.3919 35.9973 31.1944 34.1626 33.4299C32.328 35.6654 29.775 37.1956 26.9386 37.7598C24.1023 38.324 21.158 37.8872 18.6075 36.524C16.0571 35.1607 14.0582 32.9553 12.9515 30.2835C11.8448 27.6117 11.6988 24.6389 12.5382 21.8714C13.3777 19.104 15.1508 16.7133 17.5554 15.1066C19.9599 13.5 22.8472 12.7768 25.7252 13.0602C28.6032 13.3437 31.2939 14.6163 33.3388 16.6612" stroke="#131313"/>
-            <path d="M29.5 8.5L33.9999 16.5001" stroke="#131313"/>
-            <path d="M34.0586 16.5194L25 18" stroke="#131313"/>
-            <circle cx="25" cy="25" r="24.5" stroke="#131313"/>
-            </svg>
-            
+            <path d="M37 25.5C37 28.3919 35.9973 31.1944 34.1626 33.4299C32.328 35.6654 29.775 37.1956 26.9386 37.7598C24.1023 38.324 21.158 37.8872 18.6075 36.524C16.0571 35.1607 14.0582 32.9553 12.9515 30.2835C11.8448 27.6117 11.6988 24.6389 12.5382 21.8714C13.3777 19.104 15.1508 16.7133 17.5554 15.1066C19.9599 13.5 22.8472 12.7768 25.7252 13.0602C28.6032 13.3437 31.2939 14.6163 33.3388 16.6612" style="stroke: var(--black-color-10);" />
+            <path d="M29.5 8.5L33.9999 16.5001" style="stroke: var(--black-color-10);" />
+            <path d="M34.0586 16.5194L25 18" style="stroke: var(--black-color-10);" />
+            <circle cx="25" cy="25" r="24.5" style="stroke: var(--black-color-10);" />
+        </svg>
         </button>
         <p class="quiz-result__text">
           Мы подсчитали, что примерная стоимость разработки вашего сайта
@@ -170,7 +169,7 @@
                       </clipPath>
                     </defs>
                   </svg>
-                  telegram
+                 <span> telegram</span>
                 </label>
 
                 <input
@@ -205,7 +204,7 @@
                       fill="white"
                     />
                   </svg>
-                  email
+               <span>  email</span>
                 </label>
               </div>
             </div>
@@ -241,6 +240,7 @@
                 stroke="white"
               />
             </svg>
+            
           </button>
         </form>
       </div>
