--- a/src/html/components/menu.html
+++ b/src/html/components/menu.html
@@ -10,14 +10,14 @@
           </h4>
           <div class="form__inputs-wrapper">
             <fieldset class="form__inputs">
-              <div class="footer__input-wrapper">
+              <div class="menu__input-wrapper">
                 <input
                 type="text"
-                class="footer__input-name input-name"
-                id="footer-name"
+                class="menu__input-name input-name"
+                id="menu-name"
                 placeholder=" "
               />
-              <label class="footer__label-name" for="name">Имя</label>
+              <label class="menu__label-name" for="name">Имя</label>
             </div>
               <div class="menu__input-connect">
                 <div class="menu__input-wrapper">
@@ -46,12 +46,12 @@
                       <g clip-path="url(#clip0_719_334)">
                         <path
                           d="M18.3764 1.77433L0.657317 8.64256C-0.0557229 8.96238 -0.296898 9.60293 0.484944 9.95053L5.03069 11.4026L16.0216 4.57487C16.6217 4.14622 17.2361 4.26053 16.7074 4.73204L7.2677 13.3232L6.97117 16.959C7.24583 17.5204 7.74873 17.523 8.0695 17.244L10.6811 14.7601L15.154 18.1267C16.1928 18.7449 16.7581 18.346 16.9816 17.2129L19.9154 3.24925C20.22 1.85449 19.7006 1.23996 18.3764 1.77433Z"
-                          fill="white"
+                          fill="var(--white-color-10)"
                         />
                       </g>
                       <defs>
                         <clipPath id="clip0_719_334">
-                          <rect width="20" height="20" fill="white" />
+                          <rect width="20" height="20" fill="var(--white-color-10)" />
                         </clipPath>
                       </defs>
                     </svg>
@@ -74,19 +74,19 @@
                     >
                       <path
                         d="M13.3892 8.33343L19.7933 13.8226C19.9296 13.5106 19.9999 13.1739 20 12.8334V4.12427L13.3892 8.33343Z"
-                        fill="white"
+                        fill="var(--white-color-10)"
                       />
                       <path
                         d="M10.4483 8.22754L19.91 2.20587C19.7714 1.67145 19.4598 1.19793 19.0239 0.859202C18.5879 0.520469 18.0521 0.335576 17.5 0.333374H2.49997C1.94788 0.335576 1.41205 0.520469 0.97608 0.859202C0.540114 1.19793 0.228537 1.67145 0.0899658 2.20587L9.55247 8.22754C9.6865 8.31226 9.84182 8.35723 10.0004 8.35723C10.1589 8.35723 10.3143 8.31226 10.4483 8.22754Z"
-                        fill="white"
+                        fill="var(--white-color-10)"
                       />
                       <path
                         d="M0 4.12427V12.8334C0.000309152 13.1733 0.0706614 13.5095 0.206667 13.8209L6.61083 8.33344L0 4.12427Z"
-                        fill="white"
+                        fill="var(--white-color-10)"
                       />
                       <path
                         d="M11.9284 9.2617L11.3451 9.6342C10.9434 9.88788 10.478 10.0225 10.003 10.0225C9.5279 10.0225 9.06256 9.88788 8.66089 9.6342L8.07756 9.26086C8.06506 9.27253 8.06006 9.28836 8.04756 9.2992L1.34839 15.0375C1.70232 15.2288 2.09776 15.3304 2.50006 15.3334H17.5001C17.9026 15.3304 18.2983 15.2288 18.6526 15.0375L11.9584 9.2992C11.9451 9.28836 11.9401 9.27253 11.9284 9.2617Z"
-                        fill="white"
+                        fill="var(--white-color-10)"
                       />
                     </svg>
                   </label>
@@ -103,51 +103,25 @@
                 class="send-icon"
                 xmlns="http://www.w3.org/2000/svg"
               >
-                <path d="M20.9166 15.5868L20.5 0.56968" stroke="white" />
+                <path d="M20.9166 15.5868L20.5 0.56968" stroke="var(--white-color-10)" />
                 <line
                   y1="-0.5"
                   x2="15.0229"
                   y2="-0.5"
                   transform="matrix(0.999654 0.026301 0.302535 -0.953138 5.9646 0)"
-                  stroke="white"
+                  stroke="var(--white-color-10)"
                 />
                 <line
                   x1="0.646193"
                   y1="20.6467"
                   x2="20.5043"
                   y2="0.760103"
-                  stroke="white"
+                  stroke="var(--white-color-10)"
                 />
               </svg>
             </button>
           </div>
-          <div class="contact-method-radio">
-            <input type="radio" id="telegram-radio" name="contactMethod" value="telegram" hidden>
-            <label for="telegram" class="contact-method-label">
-                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g clip-path="url(#clip0_719_334)">
-                    <path d="M18.3764 1.77433L0.657317 8.64256C-0.0557229 8.96238 -0.296898 9.60293 0.484944 9.95053L5.03069 11.4026L16.0216 4.57487C16.6217 4.14622 17.2361 4.26053 16.7074 4.73204L7.2677 13.3232L6.97117 16.959C7.24583 17.5204 7.74873 17.523 8.0695 17.244L10.6811 14.7601L15.154 18.1267C16.1928 18.7449 16.7581 18.346 16.9816 17.2129L19.9154 3.24925C20.22 1.85449 19.7006 1.23996 18.3764 1.77433Z" fill="white"/>
-                    </g>
-                    <defs>
-                    <clipPath id="clip0_719_334">
-                    <rect width="20" height="20" fill="white"/>
-                    </clipPath>
-                    </defs>
-                    </svg>
-                    
-            </label>
-      
-            <input type="radio" id="email-radio" name="contactMethod" value="email" hidden>
-            <label for="email" class="contact-method-label">
-                <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M13.3892 8.33343L19.7933 13.8226C19.9296 13.5106 19.9999 13.1739 20 12.8334V4.12427L13.3892 8.33343Z" fill="white"/>
-                    <path d="M10.4483 8.22754L19.91 2.20587C19.7714 1.67145 19.4598 1.19793 19.0239 0.859202C18.5879 0.520469 18.0521 0.335576 17.5 0.333374H2.49997C1.94788 0.335576 1.41205 0.520469 0.97608 0.859202C0.540114 1.19793 0.228537 1.67145 0.0899658 2.20587L9.55247 8.22754C9.6865 8.31226 9.84182 8.35723 10.0004 8.35723C10.1589 8.35723 10.3143 8.31226 10.4483 8.22754Z" fill="white"/>
-                    <path d="M0 4.12427V12.8334C0.000309152 13.1733 0.0706614 13.5095 0.206667 13.8209L6.61083 8.33344L0 4.12427Z" fill="white"/>
-                    <path d="M11.9284 9.2617L11.3451 9.6342C10.9434 9.88788 10.478 10.0225 10.003 10.0225C9.5279 10.0225 9.06256 9.88788 8.66089 9.6342L8.07756 9.26086C8.06506 9.27253 8.06006 9.28836 8.04756 9.2992L1.34839 15.0375C1.70232 15.2288 2.09776 15.3304 2.50006 15.3334H17.5001C17.9026 15.3304 18.2983 15.2288 18.6526 15.0375L11.9584 9.2992C11.9451 9.28836 11.9401 9.27253 11.9284 9.2617Z" fill="white"/>
-                    </svg>
-                    
-            </label>
-          </div>
+        
         </form>
       </div>
       <div class="menu__left-logo">
