--- a/src/scss/components/adv.scss
+++ b/src/scss/components/adv.scss
@@ -93,3 +93,12 @@
     max-width: 251px;
   }
 }
+
+
+[data-theme='light']{
+  .adv__arrow{
+    svg line{
+      stroke: var(--white-color-10);
+    }
+  }
+}
