--- a/src/html/components/live.html
+++ b/src/html/components/live.html
@@ -139,23 +139,23 @@
     </ul>
     
     <div class="live__btns">
-      <button class="live__prev-btn live-btn">
+      <button class="live__prev-btn live-btn btn--hover">
         <svg width="29" height="22" viewBox="0 0 29 22" fill="none" xmlns="http://www.w3.org/2000/svg">
             <line y1="-0.5" x2="15.0229" y2="-0.5" transform="matrix(-0.686039 -0.727564 -0.8893 0.457324 10.3062 21.8115)" stroke="white"/>
             <line y1="-0.5" x2="15.0229" y2="-0.5" transform="matrix(-0.689446 0.724337 -0.887144 -0.461492 10.3574 0)" stroke="white"/>
             <line y1="-0.5" x2="28.1038" y2="-0.5" transform="matrix(-0.999997 -0.00234638 -0.00234638 0.999997 28.6982 11.3687)" stroke="white"/>
             </svg>
-            
+            <span></span>
         Назад
     </button>
-      <button class="live__next-btn live-btn">
+      <button class="live__next-btn live-btn btn--hover">
         Вперед
         <svg width="29" height="22" viewBox="0 0 29 22" fill="none" xmlns="http://www.w3.org/2000/svg">
             <line y1="-0.5" x2="15.0229" y2="-0.5" transform="matrix(0.686039 -0.727564 0.8893 0.457324 18.3921 21.8115)" stroke="white"/>
             <line y1="-0.5" x2="15.0229" y2="-0.5" transform="matrix(0.689446 0.724337 0.887144 -0.461492 18.3408 0)" stroke="white"/>
             <line x1="-0.00117319" y1="10.8687" x2="28.1025" y2="10.8027" stroke="white"/>
             </svg>
-            
+            <span></span>
     </button>
     </div>
   </div>
