--- a/src/html/components/services.html
+++ b/src/html/components/services.html
@@ -14,9 +14,9 @@
                 <circle cx="550" cy="540" r="549.5" stroke="url(#paint0_linear_1061_18)" stroke-opacity="0.3"/>
                 <defs>
                 <linearGradient id="paint0_linear_1061_18" x1="550" y1="-10" x2="550" y2="1090" gradientUnits="userSpaceOnUse">
-                <stop stop-color="white" stop-opacity="0.1"/>
-                <stop offset="0.5" stop-color="white"/>
-                <stop offset="1" stop-color="white" stop-opacity="0.1"/>
+                <stop style="stop-color: var(--gradient-color-start);"/>
+                <stop offset="0.5" style="stop-color: var(--gradient-color-middle);"/>
+                <stop offset="1" style="stop-color: var(--gradient-color-end);"/>
                 </linearGradient>
                 </defs>
                 </svg>
@@ -53,9 +53,9 @@
             <circle cx="700" cy="540" r="699.5" stroke="url(#paint0_linear_1061_19)" stroke-opacity="0.3" />
             <defs>
               <linearGradient id="paint0_linear_1061_19" x1="700" y1="-160" x2="700" y2="1240" gradientUnits="userSpaceOnUse">
-                <stop stop-color="white" stop-opacity="0.1" />
-                <stop offset="0.5" stop-color="white" />
-                <stop offset="1" stop-color="white" stop-opacity="0.1" />
+                <stop style="stop-color: var(--gradient-color-start);"/>
+                <stop offset="0.5" style="stop-color: var(--gradient-color-middle);"/>
+                <stop offset="1" style="stop-color: var(--gradient-color-end);"/>
               </linearGradient>
             </defs>
           </svg>
@@ -92,9 +92,9 @@
             <circle cx="850" cy="540" r="849.5" stroke="url(#paint0_linear_1061_21)" stroke-opacity="0.3" />
             <defs>
               <linearGradient id="paint0_linear_1061_21" x1="850" y1="-310" x2="850" y2="1390" gradientUnits="userSpaceOnUse">
-                <stop stop-color="white" stop-opacity="0.1" />
-                <stop offset="0.5" stop-color="white" />
-                <stop offset="1" stop-color="white" stop-opacity="0.1" />
+                <stop style="stop-color: var(--gradient-color-start);"/>
+                <stop offset="0.5" style="stop-color: var(--gradient-color-middle);"/>
+                <stop offset="1" style="stop-color: var(--gradient-color-end);"/>
               </linearGradient>
             </defs>
           </svg>
