--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -194,6 +194,7 @@
     z-index: 0;
     svg line {
       transition: stroke 0.3s ease-in-out;
+      stroke: var(--white-color-10)
     }
     span {
       background-color: var(--white-color-10);
@@ -244,5 +245,19 @@
     font-size: 20px;
     color: var(--white-color-10);
   
+  }
+}
+
+[data-theme='light']{
+    .footer__label-name,
+  .footer__placeholder-connect {
+    color: var(--white-color-10)
+  }
+
+  input[type='radio']:checked + .footer__method {
+  
+    svg path {
+      fill: var(--black-color-10);
+    }
   }
 }
