--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -275,6 +275,9 @@ header {
     @media screen and (max-width: 440px) {
       font-size: 50px;
     }
+    @media screen and (max-width: 380px) {
+      font-size: 40px;
+    }
   }
 
   &__subtitle {
@@ -291,6 +294,9 @@ header {
     }
     @media screen and (max-width: 440px) {
       font-size: 18px;
+    }
+    @media screen and (max-width: 380px) {
+      font-size: 16px;
     }
   }
 
