--- a/src/scss/components/calc.scss
+++ b/src/scss/components/calc.scss
@@ -213,6 +213,24 @@
     border-radius: 50px;
     background-color: var(--blue-color-10);
   }
+  textarea{
+    width: 100%;
+    border-radius: 10px;
+    padding: 15px;
+    resize: none;
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--black-color-10);
+    border: 1px solid var(--blue-color-10);
+    background-color: transparent;
+  }
+  .quiz__warning{
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 16px;
+    color: red;
+  }
 
   .calc__quiz-loading {
     opacity: 0;
