--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -183,7 +183,7 @@ header {
     padding: 30px 0;
     gap: 30px;
     @include mobile{
-      gap: 0px;
+      gap: 10px;
     }
   }
   &__logo {
@@ -306,7 +306,7 @@ header {
     align-items: center;
     gap: 10px;
     position: absolute;
-    left: 50vw;
+    left: 50%;
     transform: translateX(-50%);
     bottom: 10px;
     span {
