--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
 
 @import 'mixins/index';
 @import 'base/index';
-
+@import 'components/preloader';
 @import 'components/header';
 @import 'components/menu';
 @import 'components/about';
