--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -85,7 +85,7 @@
               y1="11.4096"
               x2="9.71327"
               y2="4.40962"
-              stroke="white"
+              stroke="var(--white-color-10)"
               stroke-opacity="0.5"
             />
             <line
@@ -93,7 +93,7 @@
               x2="12.2066"
               y2="-0.5"
               transform="matrix(0.819232 -0.573462 -0.573462 -0.819232 0 11)"
-              stroke="white"
+              stroke="var(--white-color-10)"
               stroke-opacity="0.5"
             />
             <line
@@ -101,7 +101,7 @@
               y1="7.40962"
               x2="9.71327"
               y2="0.409615"
-              stroke="white"
+              stroke="var(--white-color-10)"
               stroke-opacity="0.5"
             />
             <line
@@ -109,7 +109,7 @@
               x2="12.2066"
               y2="-0.5"
               transform="matrix(0.819232 -0.573462 -0.573462 -0.819232 0 7)"
-              stroke="white"
+              stroke="var(--white-color-10)"
               stroke-opacity="0.5"
             />
           </svg>
