--- a/src/scss/base/main.scss
+++ b/src/scss/base/main.scss
@@ -104,6 +104,8 @@ label {
   pointer-events: none;
   z-index: 1000;
   mix-blend-mode: difference; 
+  top: 0;
+  left: 0;
   @include mobile{
     display: none;
   }
@@ -201,3 +203,4 @@ label {
     }
   }
 }
+
