--- a/src/scss/components/about.scss
+++ b/src/scss/components/about.scss
@@ -3,7 +3,7 @@
   inset: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--black-color-10);
+ 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,6 +20,7 @@
     font-size: 280px;
     max-width: 1000px;
     color: var(--white-color-10);
+    -webkit-text-stroke: 2px var(--white-color-10);
     position: absolute;
     top: 0;
 
