--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -217,7 +217,8 @@ header {
       font-family: var(--font-family);
       font-weight: 300;
       font-size: 16px;
-      color: rgba(255, 255, 255, 0.5);
+      color: var(--white-color-10);
+      opacity: 0.6;
       position: absolute;
       width: 300px;
       display: flex;
@@ -230,6 +231,7 @@ header {
       }
       svg {
         animation: moveLine 2s ease-in-out infinite;
+       
       }
     }
   }
